# deadcode-api

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: check_symbols.cmake
docs/: faq.md  integration.md  integrity-checks.md  markers.md  protection-levels.md
examples/: 01_protection_levels.cpp  02_license_check.cpp  03_self_integrity.cpp  04_cpp_member_function.cpp
include/: deadcode-api.h
src/: deadcode-api.cpp
test/: symbol_survival.cpp
